ft:about page \-add about page \-styling about page [finish]

--- a/html/about.html
+++ b/html/about.html
@@ -8,6 +8,7 @@
     <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
 
     <link type="text/css" rel="stylesheet" href="../css/main.css">
+    <link type="text/css" rel="stylesheet" href="../css/about.css">
 </head>
 <body>
     <div class="container">
@@ -15,7 +16,7 @@
             <nav id="navigation">
                 <a id="banner" href="#"><img class="profile" src="../assets/profile.jpeg" alt="Profile"><span>Celestin</span></a>
                     
-                <a id="home" href="#">Home</a>
+                <a id="home" href="./index.html">Home</a>
                 <a id="blog" href="#">Blog</a>
                 <a id="about" href="#">About</a>
                 <a id="contact" href="#">Contact</a>
@@ -28,6 +29,38 @@
             </nav>
         </header>
         <div class="content">
+            <h1>Meet Me</h1>
+            <div class="about-wrapper">
+                <div class="about-inner-wrapper">
+                    <img id="my-image" src="../assets/profile.jpeg" alt="Image">
+                </div>
+                <div class="about-inner-wrapper">
+
+                    <p>Celestin Niyindagiriye Mathematician, Web developer & designer </p>
+                    <p>I help companies and businesses to reflect their brand in global market.  Help individuals to make personal career marketing through social networking whith other people with shared interests .</p>
+                    <p id="calender"><span class="iconify" data-inline="false" data-icon="uim:calender" style="font-size: 32px; padding-right: 6px;"></span>6<sup>th</sup> April 1998</p>
+                    <a id="skype" href=""><span class="iconify" data-inline="false" data-icon="uim:skype" style="font-size: 32px; padding-right: 6px;"></span>Let's talk</a>
+
+                    <h2>Proficiency</h2>
+
+                    <p>JavaScript 90%</p>
+                    <div class="skills-container">
+                        <div class="skills-javascript"></div>
+                    </div>
+                    <p>Python 85%</p>
+                    <div class="skills-container">
+                        <div class="skills-python"></div>
+                    </div>
+                    <p>Java 80%</p>
+                    <div class="skills-container">
+                        <div class="skills-java"></div>
+                    </div>
+                    <p>Statistics 83%</p>
+                    <div class="skills-container">
+                        <div class="skills-statistics"></div>
+                    </div>
+                </div>
+            </div>
         </div>
         <footer>
             <div class="footer-wrapper">
