--- a/html/index.html
+++ b/html/index.html
@@ -15,9 +15,9 @@
             <nav id="navigation">
                 <a id="banner" href="#"><img class="profile" src="../assets/profile.jpeg" alt="Profile"><span>Celestin</span></a>
                     
-                <a id="home" href="#">Home</a>
+                <a id="home" href=".">Home</a>
                 <a id="blog" href="#">Blog</a>
-                <a id="about" href="#">About</a>
+                <a id="about" href="./about.html">About</a>
                 <a id="contact" href="#">Contact</a>
                 <a id="login" href="#">Login</a>
                 <div class="menu-icon" onclick="changeMenu(this)">
