--- a/html/contact.html
+++ b/html/contact.html
@@ -8,7 +8,7 @@
     <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
 
     <link type="text/css" rel="stylesheet" href="../css/main.css">
-    <link type="text/css" rel="stylesheet" href="../css/about.css">
+    <link type="text/css" rel="stylesheet" href="../css/contact.css">
 </head>
 <body>
     <div class="container">
@@ -19,7 +19,7 @@
                 <a id="home" href="./index.html">Home</a>
                 <a id="blog" href="#">Blog</a>
                 <a id="about" href="#">About</a>
-                <a id="contact" href="./contact.html">Contact</a>
+                <a id="contact" href="#">Contact</a>
                 <a id="login" href="#">Login</a>
                 <div class="menu-icon" onclick="changeMenu(this)">
                         <div></div>
@@ -28,40 +28,31 @@
                     </div>
             </nav>
         </header>
+
         <div class="content">
-            <h1>Meet Me</h1>
-            <div class="about-wrapper">
-                <div class="about-inner-wrapper">
-                    <img id="my-image" src="../assets/profile.jpeg" alt="Image">
-                </div>
-                <div class="about-inner-wrapper">
-
-                    <p>Celestin Niyindagiriye Mathematician, Web developer & designer </p>
-                    <p>I help companies and businesses to reflect their brand in global market.  Help individuals to make personal career marketing through social networking whith other people with shared interests .</p>
-                    <p id="calender"><span class="iconify" data-inline="false" data-icon="uim:calender" style="font-size: 32px; padding-right: 6px;"></span>6<sup>th</sup> April 1998</p>
-                    <a id="skype" href=""><span class="iconify" data-inline="false" data-icon="uim:skype" style="font-size: 32px; padding-right: 6px;"></span>Let's talk</a>
-
-                    <h2>Proficiency</h2>
-
-                    <p>JavaScript 90%</p>
-                    <div class="skills-container">
-                        <div class="skills-javascript"></div>
+            <div class="contact-wrapper">
+                <h3>Write me a message</h3>
+                <p id="chat"><span class="iconify" data-inline="false" data-icon="cryptocurrency:chat" style="font-size: 32px; color: #0007A6; padding-right: 6px;"></span></p>
+                <form action="">
+                    <div>
+                        <p>
+                            <label for="name">Name:</label><br>
+                            <input type="text" name="name">
+                        </p>
+                        <p>
+                            <label for="email">E-mail</label><br>
+                            <input type="email" name="email">
+                        </p>
+                        <p>
+                            <label for="message">Message</label><br>
+                            <textarea name="message" id="message" cols="30" rows="5"></textarea>
+                        </p>
                     </div>
-                    <p>Python 85%</p>
-                    <div class="skills-container">
-                        <div class="skills-python"></div>
-                    </div>
-                    <p>Java 80%</p>
-                    <div class="skills-container">
-                        <div class="skills-java"></div>
-                    </div>
-                    <p>Statistics 83%</p>
-                    <div class="skills-container">
-                        <div class="skills-statistics"></div>
-                    </div>
-                </div>
+                    <input type="submit" value="Send">
+                </form>
             </div>
         </div>
+
         <footer>
             <div class="footer-wrapper">
                 <div class="footer-inner-wrapper about-footer">
