--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
                 <a id="home" href=".">Home</a>
                 <a id="blog" href="#">Blog</a>
                 <a id="about" href="./about.html">About</a>
-                <a id="contact" href="#">Contact</a>
+                <a id="contact" href="./contact.html">Contact</a>
                 <a id="login" href="#">Login</a>
                 <div class="menu-icon" onclick="changeMenu(this)">
                         <div></div>
