bg(landig-page) solving how icons look - add icons - styling icons [finish]

--- a/html/about.html
+++ b/html/about.html
@@ -79,21 +79,21 @@
                 </div>
                 <div class="footer-inner-wrapper social-media">
                     <h6>Get in touch</h6> 
-                    <div class="get-in-touch"><a href=""><span class="iconify" data-inline="false" data-icon="brandico:linkedin" style="font-size: 32px; color: #FDFBFB; margin-right: 6px;"></span></a>
-                    <a href="#"><span class="iconify" data-inline="false" data-icon="teenyicons:github-solid" style="font-size: 32px; color: #FDFBFB; margin-right: 6px;"></span></a>
-                    <a href=""><span class="iconify" data-inline="false" data-icon="brandico:facebook" style="font-size: 32px; color: #FDFBFB; margin-right: 6px;"></span></a>
-                    <a href=""><span class="iconify" data-inline="false" data-icon="bx:bxl-youtube" style="font-size: 32px; color: #FDFBFB; margin-right: 6px;"></span></a>
-                    <a href=""><span class="iconify" data-inline="false" data-icon="uim:skype-alt" style="font-size: 32px; color: #FDFBFB;"></span></a>
+                    <div class="get-in-touch"><a href=""><img src="../assets/icons/linkedin.png" alt="linkedin"></a>
+                    <a href="#"><img src="../assets/icons/github-big-logo.png" alt="github"></a>
+                    <a href=""><img src="../assets/icons/facebook.png" alt="facebook"></a>
+                    <a href=""><img src="../assets/icons/youtube.png" alt="youtube"></a>
+                    <a href=""><img src="../assets/icons/skype.png" alt="skype"></a>
                      </div>
                        
                 </div>
                 <div class="footer-inner-wrapper contact-footer">
                     <h5>Contact</h5>
-                    <p><span class="iconify" data-inline="false" data-icon="dashicons:email" style="font-size: 32px; color: #FDFBFB; padding-right: 6px;"></span>
+                    <p><img src="../assets/icons/email.png" alt="E-mail" style="padding-right: 6px;">
                         cniyindagiriye@gmail.com</p>
-                    <p><span class="iconify" data-inline="false" data-icon="bx:bxs-phone-call" style="font-size: 32px; color:#FDFBFB; padding-right: 6px;"></span>
+                    <p><img class="iconify" src="../assets/icons/phone-call.png" alt="Call us" style="padding-right: 6px;">
                         +250 780 728 136</p>
-                    <p><span class="iconify" data-inline="false" data-icon="gridicons:location" style="font-size: 32px; color: #FDFBFB; padding-right: 6px;"></span>
+                    <p><img src="../assets/icons/location-pin.png" alt="Location" style="padding-right: 6px;">
                         Gasaka, Nyamagabe, Rwanda</p>
                 </div>
             </div>
