--- a/html/blog.html
+++ b/html/blog.html
@@ -16,9 +16,9 @@
                 <a id="banner" href="#"><img class="profile" src="../assets/profile.jpeg" alt="Profile"><span>Celestin</span></a>
                     
                 <a id="home" href="./index.html">Home</a>
-                <a id="blog" href="#">Blog</a>
-                <a id="about" href="#">About</a>
-                <a id="contact" href="#">Contact</a>
+                <a id="blog" href=".">Blog</a>
+                <a id="about" href="./about.html">About</a>
+                <a id="contact" href="./contact.html">Contact</a>
                 <a id="login" href="#">Login</a>
                 <div class="menu-icon" onclick="changeMenu(this)">
                         <div></div>
