feat(about page) create page about me **What does this PR do?** add calendar icon add skype icon change about.html
**How to test it?**
__open this link__:https://cniyindagiriye.github.io/portfolio/html/about.html

**Relevant Trello Card**
https://trello.com/c/PjrVz2e7
[Finish ft-about]

--- a/html/about.html
+++ b/html/about.html
@@ -37,8 +37,8 @@
 
                     <p>Celestin Niyindagiriye Mathematician, Web developer & designer </p>
                     <p>I help companies and businesses to reflect their brand in global market.  Help individuals to make personal career marketing through social networking whith other people with shared interests .</p>
-                    <p id="calender"><span class="iconify" data-inline="false" data-icon="uim:calender" style="font-size: 32px; padding-right: 6px;"></span>6<sup>th</sup> April 1998</p>
-                    <a id="skype" href=""><span class="iconify" data-inline="false" data-icon="uim:skype" style="font-size: 32px; padding-right: 6px;"></span>Let's talk</a>
+                    <p id="calender"><img src="../assets/icons/calendar.png" alt="Birth date" >6<sup>th</sup> April 1998</p>
+                    <a id="skype" href=""><img src="../assets/icons/skype1.png" alt="Skype" > Let's talk</a>
 
                     <h2>Proficiency</h2>
 
