feat(login page) create sign in page of my blog **What does this PR do?** - add login .html - styling login page using contact.css - add enter.png icon **How to test?** __open this link__:https://cniyindagiriye.github.io/portfolio/html/login.html [Finish ft-login]

--- a/html/blog.html
+++ b/html/blog.html
@@ -16,7 +16,7 @@
                 <a id="banner" href="#"><img class="profile" src="../assets/profile.jpeg" alt="Profile"><span>Celestin</span></a>
                     
                 <a id="home" href="./index.html">Home</a>
-                <a id="blog" href=".">Blog</a>
+                <a id="blog" href="." style="background-color: #CEFBFE; color: 030230;">Blog</a>
                 <a id="about" href="./about.html">About</a>
                 <a id="contact" href="./contact.html">Contact</a>
                 <a id="login" href="#">Login</a>
