--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
             <nav id="navigation">
                 <a id="banner" href="#"><img class="profile" src="../assets/profile.jpeg" alt="Profile"><span>Celestin</span></a>
                     
-                <a id="home" href=".">Home</a>
+                <a id="home" href="." style="background-color: #CEFBFE; color: 030230;">Home</a>
                 <a id="blog" href="#">Blog</a>
                 <a id="about" href="./about.html">About</a>
                 <a id="contact" href="./contact.html">Contact</a>
