--- a/html/contact.html
+++ b/html/contact.html
@@ -18,7 +18,7 @@
                 <a id="home" href="./index.html">Home</a>
                 <a id="blog" href="#">Blog</a>
                 <a id="about" href="#">About</a>
-                <a id="contact" href="#">Contact</a>
+                <a id="contact" href="#" style="background-color: #CEFBFE; color: 030230;">Contact</a>
                 <a id="login" href="#">Login</a>
                 <div class="menu-icon" onclick="changeMenu(this)">
                         <div></div>
@@ -34,21 +34,21 @@
                 <h3>Write me a message</h3>
                 <p id="chat"><img class="iconify" src="../assets/icons/chat.png" alt=""></p>
                 <form action="">
-                    <div>
+                    <div class="contact">
                         <p>
                             <label for="name">Name:</label><br>
-                            <input type="text" name="name">
+                            <input class="input-field" type="text" name="name">
                         </p>
                         <p>
                             <label for="email">E-mail:</label><br>
-                            <input type="email" name="email">
+                            <input class="input-field" type="email" name="email">
                         </p>
                         <p>
                             <label for="message">Message:</label><br>
                             <textarea name="message" id="message" cols="30" rows="5"></textarea>
                         </p>
                     </div>
-                    <input type="submit" value="Send">
+                    <input id="send-button" type="submit" value="Send">
                 </form>
             </div>
         </div>
