--- a/html/signup.html
+++ b/html/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Celestin Niyindaigiriye</title>
+    <title>Login | Celestin's Blog</title>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 
     <link type="text/css" rel="stylesheet" href="../css/main.css">
@@ -18,8 +18,8 @@
                 <a id="home" href="./index.html">Home</a>
                 <a id="blog" href="#">Blog</a>
                 <a id="about" href="#">About</a>
-                <a id="contact" href="#" style="background-color: #CEFBFE; color: 030230;">Contact</a>
-                <a id="login" href="#">Login</a>
+                <a id="contact" href="#">Contact</a>
+                <a id="login" href="#" style="background-color: #CEFBFE; color: 030230;">Login</a>
                 <div class="menu-icon" onclick="changeMenu(this)">
                         <div></div>
                         <div></div>
@@ -30,24 +30,36 @@
 
         <div class="content">
             <div class="contact-wrapper">
-                <h3>Write me a message</h3>
-                <p id="chat"><img class="iconify" src="../assets/icons/chat.png" alt=""></p>
+                <h3>Already have an account?&nbsp;<a href="">Login</a></h3>
+                <p id="chat"><img class="iconify" src="../assets/icons/round-account-button-with-user-inside.png" alt=""></p>
                 <form action="">
-                    <div class="contact">
+                    <div class="login">
                         <p>
-                            <label for="name">Name:</label><br>
-                            <input class="input-field" type="text" name="name">
+                            <label for="name">First Name:</label><br>
+                            <input class="input-field" type="text" name="fname">
                         </p>
                         <p>
-                            <label for="email">E-mail:</label><br>
+                            <label for="name">Last Name:</label><br>
+                            <input class="input-field" type="text" name="lname">
+                        </p>
+                        <p>
+                            <label for="name">E-mail:</label><br>
                             <input class="input-field" type="email" name="email">
                         </p>
                         <p>
-                            <label for="message">Message:</label><br>
-                            <textarea name="message" id="message" cols="30" rows="5"></textarea>
+                            <label for="name">Username:</label><br>
+                            <input class="input-field" type="text" name="name">
+                        </p>
+                        <p>
+                            <label for="email">Password:</label><br>
+                            <input class="input-field" type="password" name="password">
+                        </p>
+                        <p>
+                            <label for="name">Re-type Password:</label><br>
+                            <input class="input-field" type="password" name="password">
                         </p>
                     </div>
-                    <input id="send-button" type="submit" value="Send">
+                    <input id="login-button" type="submit" value="Sign Up">
                 </form>
             </div>
         </div>
