--- a/html/about.html
+++ b/html/about.html
@@ -16,10 +16,10 @@
                 <a id="banner" href="#"><img class="profile" src="../assets/profile.jpeg" alt="Profile"><span>Celestin</span></a>
                     
                 <a id="home" href="./index.html">Home</a>
-                <a id="blog" href="#">Blog</a>
-                <a id="about" href="#" style="background-color: #CEFBFE; color: 030230;">About</a>
+                <a id="blog" href="./blog.html">Blog</a>
+                <a id="about" class="current" href="#">About</a>
                 <a id="contact" href="./contact.html">Contact</a>
-                <a id="login" href="#">Login</a>
+                <a id="login" href="./login.html">Login</a>
                 <div class="menu-icon" onclick="changeMenu(this)">
                         <div></div>
                         <div></div>
@@ -88,11 +88,11 @@
                 </div>
                 <div class="footer-inner-wrapper contact-footer">
                     <h5>Contact</h5>
-                    <p><img src="../assets/icons/email.png" alt="E-mail" style="padding-right: 6px;">
+                    <p><img src="../assets/icons/email.png" alt="E-mail" />
                         cniyindagiriye@gmail.com</p>
-                    <p><img class="iconify" src="../assets/icons/phone-call.png" alt="Call us" style="padding-right: 6px;">
+                    <p><img class="iconify" src="../assets/icons/phone-call.png" alt="Call us" />
                         +250 780 728 136</p>
-                    <p><img src="../assets/icons/location-pin.png" alt="Location" style="padding-right: 6px;">
+                    <p><img src="../assets/icons/location-pin.png" alt="Location" />
                         Gasaka, Nyamagabe, Rwanda</p>
                 </div>
             </div>
