--- a/html/blog.html
+++ b/html/blog.html
@@ -16,15 +16,15 @@
                 <a id="banner" href="#"><img class="profile" src="../assets/profile.jpeg" alt="Profile"><span>Celestin</span></a>
                     
                 <a id="home" href="./index.html">Home</a>
-                <a id="blog" href="." style="background-color: #CEFBFE; color: 030230;">Blog</a>
+                <a id="blog" class="current" href="#">Blog</a>
                 <a id="about" href="./about.html">About</a>
                 <a id="contact" href="./contact.html">Contact</a>
-                <a id="login" href="#">Login</a>
+                <a id="login" href="./login.html">Login</a>
                 <div class="menu-icon" onclick="changeMenu(this)">
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                    </div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
             </nav>
         </header>
 
@@ -72,26 +72,26 @@
                 </div>
                 <div class="blog-article">
                     <div class="blog-image"><a href=""><img src="../assets/icons/numpy.png" alt=""></a></div>
-                    <div>
+                    <div class="blog-content">
                         <h2><a href="">How to solve matrice with numpy python library</a></h2>
                         <p>NumPy, which stands for Numerical Python, is a library consisting of multidimensional array objects and a collection of routines for processing those arrays. </p>
-                        <p style="color: rgba(0, 0, 0, 0.411);">19th October 2020 | <a href="#">Read more+</a></p>
+                        <p>19th October 2020 | <a href="#">Read more+</a></p>
                     </div>
                 </div>
                 <div class="blog-article">
                     <div class="blog-image"><a href=""><img src="../assets/icons/numpy.png" alt=""></a></div>
-                    <div>
+                    <div class="blog-content">
                         <h2><a href="">How to solve matrice with numpy python library</a></h2>
                         <p>NumPy, which stands for Numerical Python, is a library consisting of multidimensional array objects and a collection of routines for processing those arrays. </p>
-                        <p style="color: rgba(0, 0, 0, 0.411);">19th October 2020 | <a href="#">Read more+</a></p>
+                        <p>19th October 2020 | <a href="#">Read more+</a></p>
                     </div>
                 </div>
                 <div class="blog-article">
                     <div class="blog-image"><a href=""><img src="../assets/icons/numpy.png" alt=""></a></div>
-                    <div>
+                    <div class="blog-content">
                         <h2><a href="">How to solve matrice with numpy python library</a></h2>
                         <p>NumPy, which stands for Numerical Python, is a library consisting of multidimensional array objects and a collection of routines for processing those arrays. </p>
-                        <p style="color: rgba(0, 0, 0, 0.411);">19th October 2020 | <a href="#">Read more+</a></p>
+                        <p>19th October 2020 | <a href="#">Read more+</a></p>
                     </div>
                 </div>
                 <button id="more-articles">See more articles</button>
@@ -140,11 +140,11 @@
                 </div>
                 <div class="footer-inner-wrapper contact-footer">
                     <h5>Contact</h5>
-                    <p><img src="../assets/icons/email.png" alt="E-mail" style="padding-right: 6px;">
+                    <p><img src="../assets/icons/email.png" alt="E-mail" />
                         cniyindagiriye@gmail.com</p>
-                    <p><img class="iconify" src="../assets/icons/phone-call.png" alt="Call us" style="padding-right: 6px;">
+                    <p><img class="iconify" src="../assets/icons/phone-call.png" alt="Call us" />
                         +250 780 728 136</p>
-                    <p><img src="../assets/icons/location-pin.png" alt="Location" style="padding-right: 6px;">
+                    <p><img src="../assets/icons/location-pin.png" alt="Location" />
                         Gasaka, Nyamagabe, Rwanda</p>
                 </div>
             </div>
