--- a/html/login.html
+++ b/html/login.html
@@ -16,10 +16,10 @@
                 <a id="banner" href="#"><img class="profile" src="../assets/profile.jpeg" alt="Profile"><span>Celestin</span></a>
                     
                 <a id="home" href="./index.html">Home</a>
-                <a id="blog" href="#">Blog</a>
-                <a id="about" href="#">About</a>
-                <a id="contact" href="#">Contact</a>
-                <a id="login" href="#" style="background-color: #CEFBFE; color: 030230;">Login</a>
+                <a id="blog" href="./blog.html">Blog</a>
+                <a id="about" href="./about.html">About</a>
+                <a id="contact" href="./contact.html">Contact</a>
+                <a id="login" class="current" href="#">Login</a>
                 <div class="menu-icon" onclick="changeMenu(this)">
                         <div></div>
                         <div></div>
@@ -30,7 +30,7 @@
 
         <div class="content">
             <div class="contact-wrapper">
-                <h3>First time? <a href="">Sign Up</a></h3>
+                <h3>First time? <a href="./signup.html">Sign Up</a></h3>
                 <p id="chat"><img class="iconify" src="../assets/icons/enter.png" alt=""></p>
                 <form action="">
                     <div class="login">
@@ -75,11 +75,11 @@
                 </div>
                 <div class="footer-inner-wrapper contact-footer">
                     <h5>Contact</h5>
-                    <p><img src="../assets/icons/email.png" alt="E-mail" style="padding-right: 6px;">
+                    <p><img src="../assets/icons/email.png" alt="E-mail" />
                         cniyindagiriye@gmail.com</p>
-                    <p><img class="iconify" src="../assets/icons/phone-call.png" alt="Call us" style="padding-right: 6px;">
+                    <p><img class="iconify" src="../assets/icons/phone-call.png" alt="Call us" />
                         +250 780 728 136</p>
-                    <p><img src="../assets/icons/location-pin.png" alt="Location" style="padding-right: 6px;">
+                    <p><img src="../assets/icons/location-pin.png" alt="Location" />
                         Gasaka, Nyamagabe, Rwanda</p>
                 </div>
             </div>
