--- a/html/blog.html
+++ b/html/blog.html
@@ -73,7 +73,7 @@
                 <div class="blog-article">
                     <div class="blog-image"><a href=""><img src="../assets/icons/numpy.png" alt=""></a></div>
                     <div class="blog-content">
-                        <h2><a href="">How to solve matrice with numpy python library</a></h2>
+                        <h2><a href="./blog-article.html">How to solve matrice with numpy python library</a></h2>
                         <p>NumPy, which stands for Numerical Python, is a library consisting of multidimensional array objects and a collection of routines for processing those arrays. </p>
                         <p>19th October 2020 | <a href="#">Read more+</a></p>
                     </div>
